2007-10-13  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_test_ogl.cpp
		Added gameSWF extension that 
		allow pass the user bootup options to Flash (through _global._bootup)

2007-10-13  Vitaly Alexeev <tishka92@yahoo.com>

		* base/tu_loadlib.cpp
		* base/tu_loadlib.h
		* gameswf/gameswf_freetype.cpp
		Ported to Linux

2007-10-07  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		* gameswf/gameswf_sprite.cpp
		* gameswf/samples/test_superclass/box.as
		* gameswf/samples/test_superclass/circle.as
		* gameswf/samples/test_superclass/shape.as
		* gameswf/samples/test_superclass/test.fla
		* gameswf/samples/test_superclass/test.swf
		Added the supporting of 'super' object
		
2007-10-04  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_broadcaster.cpp
		* gameswf/gameswf_as_classes/as_broadcaster.h
		First we should process completely one event then another
		
2007-10-02  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_function.h
		* gameswf/gameswf_object.h
		* gameswf/gameswf_test_ogl.cpp
		* gameswf/win32/VC8/libgameswf.vcproj
		Added function.call() method implementation that 
		invokes the function represented by a Function object.

2007-09-29  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_environment.h
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		The next attempt to fixed 'this' bug in
		as_as_function::operator()

2007-09-27  Vitaly Alexeev <tishka92@yahoo.com>
		* gameswf/gameswf_object.*
		Fixed as_object::watch()

2007-09-26  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_as_sprite.cpp